[gd_scene load_steps=24 format=2]

[ext_resource path="res://Battle/Projectiles/RockyRock.gd" type="Script" id=1]
[ext_resource path="res://Battle/Projectiles/Assets/ROCKY ROCKS.png" type="Texture" id=2]

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("FloatableSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "active"
length = 1.35
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("FloatableSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="PhysicsMaterial" id=5]
rough = true
bounce = 0.6

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 660, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 780, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 840, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 420, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 540, 0, 60, 60 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "sad",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "happy",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 28.0

[node name="RockyRock" type="Node2D"]
script = ExtResource( 1 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../RigidBody2D")
anims/RESET = SubResource( 3 )
anims/active = SubResource( 2 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource( 5 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp = 0.2

[node name="AnimatedSprite" type="AnimatedSprite" parent="RigidBody2D"]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 24 )
animation = "happy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 4 )

[node name="Shadow" type="Sprite" parent="RigidBody2D"]

[node name="FloatableSprite" type="Sprite" parent="RigidBody2D"]
scale = Vector2( 0.75, 0.75 )
hframes = 18

[node name="Area2D" type="Area2D" parent="RigidBody2D/FloatableSprite"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/FloatableSprite/Area2D"]
shape = SubResource( 4 )

[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
[connection signal="body_entered" from="RigidBody2D/FloatableSprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="RigidBody2D/FloatableSprite/Area2D" to="." method="_on_Area2D_body_exited"]
